homepage, sales page,  login/register, admin page

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,49 @@
-@import "./styles/layout";
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+:root {
+  --white: #fff;
+  --black: #222;
+  --pink: #f60091;
+  --grey: #444;
+  --grey2: #959595;
+  --grey-alt: #d1e2e9;
+  --yellow: #ffd800;
+  --green: #59b210;
 }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
 body {
-  color: #a4acc4;
-  font-family: "M PLUS Rounded 1c", sans-serif;
-  font-size: 0.2rem;
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: var(--black);
+  background-color: var(--white);
+  z-index: -1;
+}
+
+li,
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
